test/1.4/errors/T_EANONSTRUCT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR EANONSTRUCT
method m(struct { int i; } *arg)
    /// ERROR EANONSTRUCT
    -> (struct { int j; }) {}

/// ERROR EANONSTRUCT
typedef void (*f1)(struct { int x; } arg);
/// ERROR EANONSTRUCT
typedef void (*f2)(struct { int x; } arg, ...);
// this one can be supported, but hard to see a real use case and would require
// some effort if we wouldn't rely on GCC for code generation.
/// ERROR EANONSTRUCT
typedef struct {int x; } (*funtype)(void);

template t {
    /// ERROR EANONSTRUCT
    shared method m(struct {int i; } arg)
    /// ERROR EANONSTRUCT
        -> (struct {int i; } *);
    /// ERROR EANONSTRUCT
    param p7 : struct { uint8 c[7]; } *;
}

method init() {
    /// ERROR EANONSTRUCT
    new struct { int i; };
    /// ERROR EANONSTRUCT
    sizeoftype struct { int i; };
    /// ERROR EANONSTRUCT
    cast(NULL, struct { int i; } *);
}
